Address code review: URI parsing, schema enum, and endpoint URL guards